[package]
name = "gate8"
version = "0.1.0"
authors = ["Evgeniy <kamtorg@bk.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "^0.2"
tokio = { version = "0.2.9", features = ["full"] }
kafka = "^0.8.0"
uuid = { version = "0.8", features = ["serde", "v4"] }